 - (bal) openbsd-compat/ OpenBSD updates.  Mostly licensing, ansifications
   and minor fixes. OK djm@
 - (bal) redo how we handle 'mysignal()'.  Move it to 
   openbsd-compat/bsd-misc.c, s/mysignal/signal/ and #define signal to
   be our 'mysignal' by default.  OK djm@
 - (dtucker) [acconfig.h auth.c configure.ac sshd.8] Bug #422 again: deny
   any access to locked accounts.  ok djm@

20030822
 - (djm) s/get_progname/ssh_get_progname/g to avoid conflict with Heimdal 
   -lbroken; ok dtucker 
 - (dtucker) [contrib/cygwin/ssh-user-config] Put keys in authorized_keys
   rather that authorized_keys2.  Patch from vinschen@redhat.com.

20030821
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/08/14 16:08:58
     [ssh-keygen.c]
     exit after primetest, ok djm@
 - (dtucker) [defines.h] Put CMSG_DATA, CMSG_FIRSTHDR with other CMSG* macros,
   change CMSG_DATA to use __CMSG_ALIGN (and thus work properly), reformat for
   consistency.
 - (dtucker) [configure.ac] Move openpty/ctty test outside of case statement
   and after normal openpty test.

20030813
 - (dtucker) [session.c] Remove #ifdef TIOCSBRK kludge.
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/08/13 08:33:02
     [session.c]
     use more portable tcsendbreak(3) and ignore break_length;
     ok deraadt, millert
   - markus@cvs.openbsd.org 2003/08/13 08:46:31
     [auth1.c readconf.c readconf.h servconf.c servconf.h ssh.c ssh_config
     ssh_config.5 sshconnect1.c sshd.8 sshd.c sshd_config sshd_config.5]
     remove RhostsAuthentication; suggested by djm@ before; ok djm@, deraadt@,
     fgsch@, miod@, henning@, jakob@ and others
   - markus@cvs.openbsd.org 2003/08/13 09:07:10
     [readconf.c ssh.c]
     socks4->socks, since with support both 4 and 5; dtucker@zip.com.au
 - (dtucker) [configure.ac openbsd-compat/bsd-misc.c openbsd-compat/bsd-misc.h]
   Add a tcsendbreak function for platforms that don't have one, based on the
   one from OpenBSD.

20030811