@@ -51,6 +51,7 @@ enum monitor_reqtype {
 	MONITOR_REQ_RSARESPONSE, MONITOR_ANS_RSARESPONSE,
  	MONITOR_REQ_KRB5, MONITOR_ANS_KRB5,
 	MONITOR_REQ_PAM_START,
+	MONITOR_REQ_PAM_ACCOUNT, MONITOR_ANS_PAM_ACCOUNT,
 	MONITOR_REQ_PAM_INIT_CTX, MONITOR_ANS_PAM_INIT_CTX,
 	MONITOR_REQ_PAM_QUERY, MONITOR_ANS_PAM_QUERY,
 	MONITOR_REQ_PAM_RESPOND, MONITOR_ANS_PAM_RESPOND,
